# pydantic-bug-repro

./: README.md  pyproject.toml
src/pydantic_bug_repro/: __init__.py  compensation.py  legal_entity.py  worker.py
